src/app/components/footer/footer.component.scss
:host {
  display: block;
  width: 100%;
  background-size: cover;
}

.footer {
  height: 100%;
  background-color: #000000B2;
  backdrop-filter: blur(12px);

  &__content {
    display: flex;
    justify-content: space-between;

    @media screen and (max-width: 520px) {
      flex-wrap: wrap;
      > * {
        flex-basis: 50%;
        &:nth-child(3) {
          text-align: end;
        }
        &:nth-child(4) {
          text-align: start;
        }
      }
    }

    &__btn {
      transition: all ease-in-out 160ms;
      &:hover {
        transform: scale(1.1);
      }
    }
  }
}

.footer__signatures {
  display: flex;
  padding-bottom: 2rem;
  justify-content: center;

  &__badge {
    background-color: #00000066;
    padding: .5rem 1rem;
    border-radius: 2rem;

    transition: all ease-in-out 160ms;
    &:hover {
      background: #FFFFFF8E;
      color: black;
    }

    &__heart {
      margin: 0 .5rem;
    }
  }
}

